--- a/searchresults.html
+++ b/searchresults.html
@@ -83,6 +83,9 @@
             position: absolute;
             top: 160px;
             left: 218px;
+        }
+
+        .pageurl {
             font-size: 14px;
         }
 
@@ -94,13 +97,13 @@
             width: 575px;
         }
 
-        #page1 a {
+        .pagelink {
             text-decoration: none;
             color: #344bb3;
             font-size: 21px;
         }
 
-        #page1 a:hover {
+        .pagelink:hover {
             text-decoration: underline;
         }
 
@@ -114,9 +117,75 @@
 
         #pageurl2 {
             position: absolute;
-            top: 300px;
+            top: 305px;
             left: 218px;
             font-size: 14px;
+        }
+
+        #page2 {
+            display: block;
+            position: absolute;
+            top: 345px;
+            left: 218px;
+            width: 575px;
+        }
+
+        #pageurl3 {
+            position: absolute;
+            top: 435px;
+            left: 218px;
+            font-size: 14px;
+        }
+
+        #page3 {
+            display: block;
+            position: absolute;
+            top: 475px;
+            left: 218px;
+            width: 575px;
+        }
+
+        #alsosearch {
+            border: solid;
+            border-radius: 16px;
+            border-width: .50px;
+            border-color: lightgray;
+            position: absolute;
+            top: 560px;
+            left: 218px;
+            width: 590px;
+            padding: 2px 15px 13px 15px;
+        }
+
+        #videos {
+            position: absolute;
+            top: 650px;
+            left: 218px;
+            font-size: 20px;
+        }
+
+        #thumbnail1 {
+            position: absolute;
+            top: 700px;
+            left: 218px;
+            border: solid lightgray;
+            border-radius: 16px;
+            border-width: .50px;
+            padding: 10px;
+            width: 200px;
+            height: 250px;
+        }
+
+        #thumbnail2 {
+            position: absolute;
+            top: 700px;
+            left: 465px;
+            border: solid lightgray;
+            border-radius: 16px;
+            border-width: .50px;
+            padding: 10px;
+            width: 200px;
+            height: 250px;
         }
 
     </style>
@@ -148,16 +217,46 @@
        </div>
 
        <div>
-           <p id="pageurl1"><strong>Ad</strong> &bull; www.wix.com/</p>
+           <p id="pageurl1" class="pageurl"><strong>Ad</strong> &bull; www.wix.com/</p>
        </div>
 
        <div id="page1">
-           <a href=#nowhere>Build Your Own Website - Create Your Own Website, Free.</a>
+           <a href=#nowhere class="pagelink">Build Your Own Website - Create Your Own Website, Free.</a>
            <p class="description">Easy to Use, Online Website Builder. 100s of templates. Custom domain name. 24/7 support center. Customizable templates. Market leaders. Top industry hosting. Easy-to-add blog. 100s of Apps. Mobile optimized. Traffic generation tools. Services: App Market, SEO Wizard.</p>
        </div>
 
-       <div>
-           <p id="pageurl2">victor-lif.github.io > google-search-results</p>
+       <p id="pageurl2" class="pageurl">victor-lif.github.io > google-search-results </p>
+
+       <div id="page2">
+           <a href="nowhere" class="pagelink">build this webpage - GitHub Pages</a>
+           <p class="description">build this webpage. https://benjdelt.github.io/google-results/. With zero coding experience, artist building 180 webpages in 180 days ...</p>
+       </div>
+
+       <p id="pageurl3" class="pageurl">christine-27.github.io > google-homepage</p>
+
+       <div id="page3">
+        <a href="nowhere" class="pagelink">build this webpage - GitHub Pages</a>
+        <p class="description">With zero coding experience, artist building 180 webpages in 180 days. hhttps://arstechnica.com/.../with-zero-coding-experience-artist-building-180-webpages-.</p>
+       </div>
+
+       <div id="alsosearch">
+           <p style="font-weight:bold;color:#4f4e4c;font-size:14px;">People also search for</p> 
+           <a href="nowhere" style="text-decoration:none;">odin project</a>
+           <a href="nowhere" style="text-decoration:none;margin-left:30px;">coding</a>
+       </div>
+
+       <div id="videos">
+           <p>Videos</p>
+       </div>
+
+       <div id="thumbnail1">
+           <a href="nowhere" style="text-decoration:none;color:#344bb3;">How to Make a Website in 10 mins - Simple & Easy</a>
+           <p style="font-size:14px;color:#575654;margin-top:150px;">Website Learners</p>
+           <p style="font-size:14px;color:#575654;margin-top:-5px;">YouTube - Jan 3, 2018</p>
+       </div>
+
+       <div id="thumbnail2">
+            <a href="nowhere" style="text-decoration:none;color:#344bb3;">How to Build a Website Without Code | Everyone Can Build a ...</a>
        </div>
 
 <br>
